--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+#.DS_Store
+.DS_Store
+
 # Project Specific
 data/*
 !data/README.md
